# hei

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/pcmd/: CMakeLists.txt  main.c  pcmd.h
extras/blitz/: CMakeLists.txt  blitz.c  blitz.h  blitz_dat.c  blitz_files.h  blitz_format_dat.c  blitz_format_psi.c  blitz_format_spt.c  blitz_hash_table.h  blitz_spt.c  blitz_titan_files.h
extras/core/: CMakeLists.txt  core.c  core.h  core_hg_files.h  core_loader_hgt.c  core_package_clu.c
platform/: CMakeLists.txt  LibraryLoader.c  filesystem_private.h  llist.c  math_matrix.c  math_vector.c  physics.c  platform.c  platform_archived  platform_console.c  platform_filesystem.c  platform_filesystem.cpp  platform_game.c  platform_graphics.cpp  platform_graphics_framebuffer.c  platform_graphics_framebuffer.cpp  platform_graphics_mesh.c  platform_graphics_mesh.cpp  platform_graphics_shader.cpp  platform_graphics_viewport.c  platform_graphics_viewport.cpp  platform_image.c  platform_image.cpp  platform_image_dds.c  platform_image_dds.cpp  platform_image_dtx.cpp  platform_image_ftx.cpp  platform_image_ppm.cpp  platform_image_tga.cpp  platform_image_tiff.cpp  platform_image_tim.c  platform_image_vtf.c  platform_image_vtf.cpp  platform_image_wad.c  platform_input.c  platform_library.c  platform_log.c  platform_math.cpp  platform_memory.c  platform_model.cpp  (+11 more)
platform/graphics/: graphics.c  graphics_camera.c  graphics_font.c  graphics_font_default.h  graphics_layer_opengl.c  graphics_layer_software.c  graphics_layer_vulkan.c  graphics_light.c  graphics_material.c  graphics_matrix.c  graphics_mesh.c  graphics_opengl.c  graphics_private.h  graphics_shader.c  graphics_texture.c  graphics_ui.c  layer_glide.c  layer_opengl.c  layer_software.c  material.c  mesh.c  platform_graphics.c  platform_graphics.cpp  platform_graphics_camera.c  platform_graphics_font.c  platform_graphics_light.c  platform_graphics_mesh.c  platform_graphics_private.h  platform_graphics_shader.cpp  platform_graphics_texture.c  platform_graphics_texture.cpp  platform_graphics_viewport.c  shader.c
platform/image/: image_3df.c  image_private.h  image_sentient_txtr.c  image_swl.c  platform_image.c  platform_image_bmp.c  platform_image_dds.c  platform_image_dtx.c  platform_image_dtx.cpp  platform_image_ftx.c  platform_image_ppm.c  platform_image_ppm.cpp  platform_image_tiff.cpp  platform_image_tim.c  platform_image_vtf.c  stb_image.h  stb_image_write.h
platform/include/: platform.h  platform_filesystem.h  platform_graphics.h  platform_graphics_camera.h  platform_graphics_framebuffer.h  platform_graphics_mesh.h  platform_graphics_shader.h  platform_graphics_texture.h  platform_graphics_viewport.h  platform_image.h  platform_library.h  platform_log.h  platform_math.h  platform_memory.h  platform_model.h  platform_model_u3d.h  platform_system.h  platform_window.h
platform/model/: model.c  model_cyclone.c  model_dpc.c  model_hdv.c  model_mesh.c  model_obj.c  model_obj.cpp  model_private.h  model_sm_msh.c  model_smd.c  model_u3d.c  model_u3d.cpp
platform/package/: package.c  package_4x.c  package_bdir.c  package_cyclone.c  package_doom_wad.c  package_ff.c  package_gremlin.c  package_mad.c  package_mortyr_apuk.c  package_private.h  package_sfa.c  package_vsr.c
platform/string/: crc32.c  itoa.c  strcasecmp.c  strcasestr.c  strcnt.c  strisalnum.c  strisalpha.c  strisdigit.c  strtolower.c  strtoupper.c  vscprintf.c
plcore/: CMakeLists.txt  LibraryLoader.c  filesystem_private.h  math_matrix.c  physics.c  pl.c  pl_array_vector.c  pl_compression.c  pl_console.c  pl_filesystem.c  pl_hashtable.c  pl_library.c  pl_linkedlist.c  pl_math_matrix.c  pl_math_random.c  pl_math_vector.c  pl_memory.c  pl_os_win32.c  pl_parser.c  pl_physics.c  pl_private.h  pl_timer.c  platform.c  platform_console.c  platform_filesystem.c  platform_memory.c  platform_private.h  qm_os_library.c
plcore/image/: image_3df.c  image_3dr_tex.c  image_angel_tex.c  image_argb.c  image_dds.c  image_dtx.c  image_ftx.c  image_hsm.c  image_private.h  image_rsb.c  image_sentient_txtr.c  image_swl.c  image_tim.c  pl_image.c  pl_image_qoi.c  platform_image.c  platform_image_dds.c  platform_image_dtx.c  platform_image_ftx.c  platform_image_tim.c
plcore/math/: pl_math_colour.c  pl_math_matrix.c  pl_math_quaternion.c  pl_math_random.c  pl_math_vector.c
plcore/model/: model.c  model_cyclone.c  model_dpc.c  model_private.h  model_u3d.c
plcore/package/: package.c  package_4x.c  package_bdir.c  package_bre_wad.c  package_doom_wad.c  package_ff.c  package_format_all.c  package_format_amuze_afs.c  package_format_amuze_ahf.c  package_format_angel_dat.c  package_format_dfs.c  package_format_doom_wad.c  package_format_frd_pak.c  package_format_fresh.c  package_format_grp.c  package_format_inu.c  package_format_mad.c  package_format_opk.c  package_format_quake_pak.c  package_format_quake_wad.c  package_format_sfa_bin.c  package_format_vpp.c  package_format_vtmb_vpk.c  package_format_zip.c  package_gremlin.c  package_ice3d_dat.c  package_mortyr_apuk.c  package_mortyr_hal.c  package_opk.c  package_private.h  package_quake_pak.c  package_quake_wad.c  package_rar.cpp  package_sfa.c  package_venom.c  package_vmtb_vpk.c  package_vsr.c  package_wad_doom.c  package_wad_quake.c  package_write.c  (+1 more)
plcore/string/: PLStrMisc.c  crc32.c  itoa.c  pl_string.c  strcasecmp.c  strcasestr.c  strcnt.c  strisalnum.c  strisalpha.c  strisdigit.c  strtolower.c  (+2 more)
plgraphics/: CMakeLists.txt  plg.c  plg_camera.c  plg_draw.c  plg_driver_interface.c  plg_layer_glide.c  plg_layer_software.c  plg_light.c  plg_mesh.c  plg_private.h  plg_shader.c  plg_texture.c  polygon.c  primitive.c  qm_gfx_framebuffer.c
plmodel/: CMakeLists.txt  plm.c  plm_format_cpj.c  plm_format_cyclone.c  plm_format_dpc.c  plm_format_hdv.c  plm_format_obj.c  plm_format_ply.c  plm_format_smd.c  plm_format_u3d.c  plm_private.h
plwindow/: CMakeLists.txt  window.c  window_private.h  window_win32.c  window_x11.c
tests/: CMakeLists.txt  test_core.c  test_model.c  test_window.c  tests.c  tests.h  tests_os.c
(+497 files in other folders)
